--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -153,7 +153,7 @@
         </div>
     </div>
 </div>
-<div id="assistant" class="manifesto_section manifesto_assistant">
+<div id="assistant" class="manifesto_section manifesto_assistant overflowhidden">
     <div class="manifesto_assistant_inside">
         <div class="container">
             <div class="row">
@@ -182,7 +182,7 @@
                 <div class="col-md-6">
                     <div class="manifesto_assistant_img">
                         <div class="manifesto_assistant_img_inside">
-                            <img src="{{ asset('/img/iPhone.png') }}" alt="" />
+                            <img src="{{ asset('img/imessagesthree.png') }}" alt="" />
                         </div>
                     </div>
                 </div>
@@ -194,6 +194,9 @@
     <div class="manifesto_genese_inside">
         <div class="container">
             <div class="row">
+                <div class="col-md-3">
+
+                </div>
                 <div class="col-md-6">
                     <div class="manifesto_genese_desc">
                         <div class="manifesto_genese_inside">
@@ -216,6 +219,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="col-md-3">
+
                 </div>
             </div>
         </div>
