--- a/views/tpl/footercity.html.twig
+++ b/views/tpl/footercity.html.twig
@@ -6,6 +6,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.0/bootstrap-slider.min.js"></script>
 <!-- Fullpage JS -->
+<script src="{{ asset('/lib/fullpage/scrolloverflow.js') }}"></script>
 <script src="{{ asset('/lib/fullpage/jquery.fullPage.js') }}"></script>
 
 <!-- assistant js -->
